feat: bolsistas github icons

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/responsividade.css">
     <link rel="stylesheet" href="styles/index.css">
     <title>Inclusão digital - home</title>
 
@@ -499,6 +499,7 @@
                 <h3>Siga o Inclusão Digital:</h3>
                 <div class="buttons-footer">    
                     <a href="https://www.instagram.com/compazdigital/" target="_blank" class="btn-sociais" title="Instagram" aria-label="Instagram do Projeto (abre em nova janela)"><i class="bi bi-instagram" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/company/inclusaodigital" target="_blank" class="btn-sociais" title="LinkedIn" aria-label="LinkedIn (abre em nova janela)"><i class="bi bi-linkedin" aria-hidden="true"></i></a>
                     <a href="https://www.youtube.com/@compazdigital" target="_blank" class="btn-sociais" title="YouTube" aria-label="YouTube do Projeto (abre em nova janela)"><i class="bi bi-youtube" aria-hidden="true"></i></a>
                 </div>
             </div>
