--- a/pages/artigo_perfis.html
+++ b/pages/artigo_perfis.html
@@ -78,6 +78,7 @@
 
                         <div class="social-icons">
                             <a href="https://www.linkedin.com/in/carloshenriquex" target="_blank" class="btn-sociais" title="LinkedIn" aria-label="LinkedIn (abre em nova janela)"><i class="bi bi-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://github.com/carlhenriquex" target="_blank" class="btn-sociais" title="GitHub" aria-label="GitHub (abre em nova janela)"><i class="bi bi-github" aria-hidden="true"></i></a>
                         </div>
                     </div> 
 
@@ -97,7 +98,8 @@
                         <h2>Glébson Silva</h2>
 
                         <div class="social-icons">
-                            <a href="https://www.instagram.com/pedro.silva.nosbelg/?utm_source=ig_web_button_share_sheet" target="_blank" class="btn-sociais" title="Instagram" aria-label="Instagram (abre em nova janela)"><i class="bi bi-instagram" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/glébson-silva-8885b1396" target="_blank" class="btn-sociais" title="LinkedIn" aria-label="LinkedIn (abre em nova janela)"><i class="bi bi-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.instagram.com/pedro.silva.nosbelg" target="_blank" class="btn-sociais" title="Instagram" aria-label="Instagram (abre em nova janela)"><i class="bi bi-instagram" aria-hidden="true"></i></a>
                             <a href="http://lattes.cnpq.br/9111883711474777" target="_blank" class="btn-sociais" title="Currículo Lattes" aria-label="Currículo Lattes (abre em nova janela)"><i class="bi bi-postcard" aria-hidden="true"></i></a>
                         </div>
                     </div>
@@ -118,7 +120,7 @@
                             <a href="https://www.linkedin.com/in/jaquelyne-alves-602a481a3" target="_blank" class="btn-sociais" title="LinkedIn" aria-label="LinkedIn (abre em nova janela)"><i class="bi bi-linkedin" aria-hidden="true"></i></a>
                             <a href="http://lattes.cnpq.br/9266896036709300" target="_blank" class="btn-sociais" title="Currículo Lattes" aria-label="Currículo Lattes (abre em nova janela)"><i class="bi bi-postcard" aria-hidden="true"></i></a>
                         </div>
-                    </div> 
+                    </div>
 
                     <p> Graduada em <strong>Enfermagem</strong> pela Universidade de Pernambuco (UPE) e estudante do Curso Técnico em <strong>Tradução e Interpretação de LIBRAS</strong> pela ETEPAC.<br>
                     No projeto, atuou de forma decisiva na área de comunicação educacional e acessibilidade. Contribuiu para a <strong>elaboração de slides didáticos</strong> e para a <strong>ministração das aulas</strong>, alinhando linguagem clara e inclusiva, além de adaptar conteúdos para diferentes perfis de público.<br>
@@ -130,7 +132,15 @@
                     <div class="foto">
                         <img src="../utils/img/rostos/julio.jpg" alt="Foto de perfil de Júlio. Ele é um homem jovem com cabelo curto e escuro, vestindo uma camiseta branca.">
                     </div>
-                    <h2>Júlio Rasec</h2>
+                    <div class="nome-e-icones">
+                        <h2>Júlio Rasec</h2>
+
+                        <div class="social-icons">
+                            <a href="https://www.linkedin.com/in/juliorasec" target="_blank" class="btn-sociais" title="LinkedIn" aria-label="LinkedIn (abre em nova janela)"><i class="bi bi-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://github.com/juliorcspace" target="_blank" class="btn-sociais" title="GitHub" aria-label="GitHub (abre em nova janela)"><i class="bi bi-github" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                    
                     <p> Estudante do curso Técnico em <strong>Desenvolvimento de Sistemas</strong> pela ETEPAC.<br>
                     Atuou no projeto na elaboração de slides e ministração das aulas, e <strong>integrou a equipe responsável pelo desenvolvimento do site institucional</strong>, auxiliando especialmente em partes do código <strong>HTML</strong> e na implementação e ajuste de imagens dentro das páginas, aplicando conceitos de <strong>design IX</strong>. Colaborou de forma complementar no refinamento visual e estrutural do conteúdo, apoiando a organização e melhoria da interface sempre que necessário. </p>
                 </div>
@@ -143,8 +153,8 @@
                         <h2>Leonardo Felipe</h2>
 
                         <div class="social-icons">
-                            <a href="https://www.instagram.com/leon.ardofelipe2023?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="btn-sociais" title="Instagram" aria-label="Instagram (abre em nova janela)"><i class="bi bi-instagram" aria-hidden="true"></i></a>
                             <a href="https://br.linkedin.com/in/leonardo-felipe-9a4b61203" target="_blank" class="btn-sociais" title="LinkedIn" aria-label="LinkedIn (abre em nova janela)"><i class="bi bi-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.instagram.com/leon.ardofelipe2023" target="_blank" class="btn-sociais" title="Instagram" aria-label="Instagram (abre em nova janela)"><i class="bi bi-instagram" aria-hidden="true"></i></a>
                             <a href="https://lattes.cnpq.br/4503746354811656" target="_blank" class="btn-sociais" title="Currículo Lattes" aria-label="Currículo Lattes (abre em nova janela)"><i class="bi bi-postcard" aria-hidden="true"></i></a>
                         </div>
                     </div>
