feat: arquivo p/ responsividade e wrap sections

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/responsividade.css">
+    <link rel="stylesheet" href="styles/responsividade_index.css">
     <link rel="stylesheet" href="styles/index.css">
     <title>Inclusão digital - home</title>
 
@@ -387,7 +387,7 @@
                             <img src="utils/img/rostos/leo.jpg" alt="">
                         </a>
 
-                        <div class="botao-mais"><i class="bi bi-mortarboard-fill"></i></div>
+                        <div class="icon-capelo"><i class="bi bi-mortarboard-fill"></i></div>
                     </div>
 
                     <div class="box-saiba-mais">
