fix: menu hamburguer ativado

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <img src="utils/img/logos/logo_site_branca.png" alt="Logo Inclusão Digital - Página Inicial">
                 </a>
 
-                <nav>
+                <nav class="desktop-menu">
                     <ul>
                         <li><a href="#artigos">ARTIGOS</a></li>
                         <li><a href="#projeto">PROJETO</a></li>
@@ -53,11 +53,9 @@
                     </ul>
                 </nav>
 
-                <div class="menu-entrar">
-                    <div class="icon-menu">
-                        <button onclick="menuShow()"><i class="bi bi-list"></i></button>
-                    </div>
 
+                <div class="icon-menu">
+                    <button onclick="menuShow()"><i class="bi bi-list"></i></button>
                 </div>
                 
             </div>
