fix: linkedIn julio

--- a/pages/artigo_perfis.html
+++ b/pages/artigo_perfis.html
@@ -136,7 +136,7 @@
                         <h2>Júlio Rasec</h2>
 
                         <div class="social-icons">
-                            <a href="https://www.linkedin.com/in/juliorasec" target="_blank" class="btn-sociais" title="LinkedIn" aria-label="LinkedIn (abre em nova janela)"><i class="bi bi-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/júliorasec" target="_blank" class="btn-sociais" title="LinkedIn" aria-label="LinkedIn (abre em nova janela)"><i class="bi bi-linkedin" aria-hidden="true"></i></a>
                             <a href="https://github.com/juliorcspace" target="_blank" class="btn-sociais" title="GitHub" aria-label="GitHub (abre em nova janela)"><i class="bi bi-github" aria-hidden="true"></i></a>
                         </div>
                     </div>
