feat: imagem substitua para perfis

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/responsividade_index.css">
+
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/responsividade_index.css">
     <title>Inclusão digital - home</title>
 
     <!-- VLibras script (carrega no head com defer + fallback de carregamento) -->
@@ -192,7 +193,7 @@
 
                 </div>
                 <div class="right-box">
-                    <h1>Conteúdos gerados</h1>
+                    <h2>Conteúdos gerados</h2>
                     <p>
                         Criamos materiais especiais para enriquecer a experiência dos participantes. A apostila oficial, utilizada nas aulas e disponibilizada tanto fisicamente quanto em PDF, reúne todos os conteúdos aplicados. A música tema, composta exclusivamente para o projeto, apresenta de forma leve tudo o que foi vivenciado pelos alunos. Já o relatório final, detalha cada etapa, metodologia e resultados alcançados ao longo do processo. Explore cada conteúdo que marcaram nossa jornada:
                     </p>
@@ -265,55 +266,55 @@
                         <div class="equipe-fotos">
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="utils/img/rostos/andry.jpg" alt="">
+                                <img src="utils/img/rostos/andry.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                                 </div>
                                 <h3 class="nome-integrante">Andryene Rodrigues</h3>
                             </div>
                             <div class="foto-container destaque">
                                 <div class="foto">
-                                <img src="utils/img/rostos/carl.jpg" alt="">
+                                <img src="utils/img/rostos/carl.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                                 </div>
                                 <h3 class="nome-integrante">Carlos Henrique</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="utils/img/rostos/glebson.jpg" alt="">
+                                <img src="utils/img/rostos/glebson.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                                 </div>
                                 <h3 class="nome-integrante">Glébson Silva</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="utils/img/rostos/jaquy.jpg" alt="">
+                                <img src="utils/img/rostos/jaquy.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                                 </div>
                                 <h3 class="nome-integrante">Jaquelyne Alves</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="utils/img/rostos/julio.jpg" alt="">
+                                <img src="utils/img/rostos/julio.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                                 </div>
                                 <h3 class="nome-integrante">Júlio rasec</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="utils/img/rostos/leo.jpg" alt="">
+                                <img src="utils/img/rostos/leo.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                             </div>
                             <h3 class="nome-integrante">Leonardo Felipe</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="utils/img/rostos/rayane.jpg" alt="">
+                                <img src="utils/img/rostos/rayane.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                                 </div>
                                 <h3 class="nome-integrante">Rayane Gomes</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="utils/img/rostos/ruth.jpg" alt="">
+                                <img src="utils/img/rostos/ruth.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                                 </div>
                                 <h3 class="nome-integrante">Ruth Pereira</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="utils/img/rostos/valmir.jpg" alt="">
+                                <img src="utils/img/rostos/valmir.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                                 </div>
                                 <h3 class="nome-integrante">Valmir Pereira</h3>
                             </div>
@@ -351,38 +352,38 @@
 
                     <div class="usuarios-lista">
                         <a href="pages/artigo_perfis.html#valmir" title="Valmir Pereira">
-                            <img src="utils/img/rostos/valmir.jpg" alt="">
+                            <img src="utils/img/rostos/valmir.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                         </a>
 
                         <a href="pages/artigo_perfis.html#andry" title="Andryene Rodrigues">
-                            <img src="utils/img/rostos/andry.jpg" alt="">
+                            <img src="utils/img/rostos/andry.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                         </a>
 
                         <a href="pages/artigo_perfis.html#carl" title="Carlos Henrique">
-                            <img src="utils/img/rostos/carl.jpg" alt="">
+                            <img src="utils/img/rostos/carl.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                         </a>
 
                         <a href="pages/artigo_perfis.html#jaquy" title="Jaquelyne Alves">
-                            <img src="utils/img/rostos/jaquy.jpg" alt="">
+                            <img src="utils/img/rostos/jaquy.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                         </a>
                         <a href="pages/artigo_perfis.html#glebson" title="Glébson Silva">
-                            <img src="utils/img/rostos/glebson.jpg" alt="">
+                            <img src="utils/img/rostos/glebson.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                         </a>
 
                         <a href="pages/artigo_perfis.html#rayane" title="Rayane Gomes">
-                            <img src="utils/img/rostos/rayane.jpg" alt="">
+                            <img src="utils/img/rostos/rayane.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                         </a>
 
                         <a href="pages/artigo_perfis.html#julio" title="Júlio Rasec">
-                            <img src="utils/img/rostos/julio.jpg" alt="">
+                            <img src="utils/img/rostos/julio.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                         </a>
 
                         <a href="pages/artigo_perfis.html#ruth" title="Ruth Pereira">
-                            <img src="utils/img/rostos/ruth.jpg" alt="">
+                            <img src="utils/img/rostos/ruth.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                         </a>
 
                         <a href="pages/artigo_perfis.html#leo" title="Leonardo Felipe">
-                            <img src="utils/img/rostos/leo.jpg" alt="">
+                            <img src="utils/img/rostos/leo.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                         </a>
 
                         <div class="icon-capelo"><i class="bi bi-mortarboard-fill"></i></div>
