feat: icon da aba do navegador

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="icon" type="image/svg+xml" href="utils/img/logos/favicon azul.svg">
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/responsividade_index.css">
     <title>Inclusão digital - home</title>
@@ -268,7 +269,7 @@
                                 <div class="foto">
                                 <img src="utils/img/rostos/andry.jpg" alt="" onerror="this.src='utils/img/rostos/user0.webp';">
                                 </div>
-                                <h3 class="nome-integrante">Andryene Rodrigues</h3>
+                                <h3 class="nome-integrante">Andry Rodrigues</h3>
                             </div>
                             <div class="foto-container destaque">
                                 <div class="foto">
