feat: responsividade mobile do index 100%

--- a/pages/artigo_relatorio.html
+++ b/pages/artigo_relatorio.html
@@ -54,7 +54,7 @@
                 <span>Escrito por: <strong>Sônia Pádua</strong></span>
             </div>
 
-            <img src="../utils/img/projeto/sobre_parceria.png" alt="Imagem sobre o artigo" class="artigo-principal-imagem">
+            <img src="../utils/img/projeto/bolsistas_na_mesa.jpg" alt="Imagem sobre o artigo" class="artigo-principal-imagem">
         </div>
 
         <div class="artigo-principal-corpo">
