feat: meta dados de compartilhamento

--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta property="og:title" content="Inclusão Digital">
+    <meta property="og:description" content="Conheça o Projeto Inclusão Digital, uma iniciativa dedicada a levar conhecimento em tecnologia para todos, com aulas práticas, acessíveis e transformadoras.">
+    <meta property="og:image" content="https://projetoinclusaodigital.com/utils/img/logos/logo_compartilhamento.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:url" content="https://projetoinclusaodigital.com">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Inclusão Digital">
+    <meta name="twitter:description" content="Conheça o Projeto Inclusão Digital, uma iniciativa dedicada a levar conhecimento em tecnologia para todos, com aulas práticas, acessíveis e transformadoras.">
+    <meta name="twitter:image" content="https://projetoinclusaodigital.com/utils/img/logos/logo_compartilhamento.jpg">
+
+    <meta name="theme-color" content="#ffffff">
+
+
+
     <link rel="icon" type="image/svg+xml" href="utils/img/logos/favicon azul.svg">
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/responsividade_index.css">
